# frienduro

./: .env  .gitignore  Cargo.toml  test.bat  test.sh
gpx/: Harnon_Runt_2017_joel.gpx  Harnon_Runt_2017_marika.gpx  Sundsvall_Classics_2017.gpx
migrations/2018-02-26-140409_initial_import/: down.sql  up.sql
src/: create_db.sql  empty_db.sql  gpx.rs  lib.rs  models - Copy.rs  models.rs
test_data/Test Race 1/segments/: SS1.gpx  SS2.gpx  SS3.gpx  SS4.gpx  SS5.gpx  SS6.gpx  SS7.gpx
test_data/Test Race 1/users/: Jane Doe.gpx
