[package]
authors = ["Joel de Vahl <joel@devahl.com>"]
name = "simplenduro"
version = "0.0.1"

[dependencies]
chrono = "0.4.0"
dotenv = "0.11.0"
lazy_static = "1.0.0"
elementtree = "0.5.0"
getopts = "0.2.17"
postgis = "0.5.0"
rocket = "0.3.6"
rocket_codegen = "0.3.6"
diesel = { version = "1.0.0", features = ["postgres"] }
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"

[dependencies.postgres]
features = ["with-chrono"]
version = "0.15.2"
