[package]
authors = ["Joel de Vahl <joel@devahl.com>"]
name = "frienduro"
version = "0.0.1"

[dependencies]
chrono = "0.4.6"
dotenv = "0.13.0"
gpx = "0.6.0"
geo = "0.12.2"
getopts = "0.2.18"
postgres = { version = "0.15.2", features = ["with-chrono"] }
postgis = "0.6.0"
serde = "1.0.98"
serde_json = "1.0"
actix-web = "1.0.3"
r2d2 = "0.8.5"
r2d2_postgres = "0.14.0"
futures = "0.1.28"
